force-app/main/default/objects/Service_Appointment_Change__e/Service_Appointment_Change__e.object-meta.xml
<CustomObject>
    <label>Service Appointment - Change</label>
    <pluralLabel>Service Appointment - Change</pluralLabel>
</CustomObject>