force-app/main/default/objects/Service_Appointment_Change__e/fields/Actual_Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration_Mins__c</fullName>
    <label>Actual Duration Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>