force-app/main/default/objects/Service_Appointment_Change__e/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <label>Actual End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>