force-app/main/default/objects/Service_Appointment_Change__e/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>Actual Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>