force-app/main/default/objects/Service_Appointment_Change__e/fields/Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Start__c</fullName>
    <label>Arrival Window Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>