force-app/main/default/objects/Service_Appointment_Change__e/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>