force-app/main/default/objects/Service_Appointment_Change__e/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>