force-app/main/default/objects/Service_Appointment_Change__e/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>