force-app/main/default/objects/Service_Appointment_Change__e/fields/Prev_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Prev_Scheduled_Start__c</fullName>
    <label>Prev Scheduled Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>