force-app/main/default/objects/Service_Appointment_Change__e/fields/Prev_Service_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Prev_Service_Territory_Id__c</fullName>
    <label>Prev Service Territory Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>