force-app/main/default/objects/Service_Appointment_Change__e/fields/Previous_Assigned_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assigned_Id__c</fullName>
    <label>Previous Assigned Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>