force-app/main/default/objects/Service_Appointment_Change__e/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <label>Scheduled End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>