force-app/main/default/objects/Service_Appointment_Change__e/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <label>Scheduled Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>