force-app/main/default/objects/Service_Appointment_Change__e/fields/Service_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Id__c</fullName>
    <label>Service Appointment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>