force-app/main/default/objects/Service_Appointment_Change__e/fields/Travel_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Mins__c</fullName>
    <label>Travel Time Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>